<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/navigation_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:icon="@drawable/ic_main"
            android:title="@string/main"/>
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/ic_pharmacies"
            android:title="@string/pharmacies"/>
        <item
            android:id="@+id/navigation_item_3"
            android:icon="@drawable/ic_map"
            android:title="@string/map"/>
        <item
            android:id="@+id/navigation_item_4"
            android:icon="@drawable/ic_basket"
            android:title="@string/basket"/>
        <item
            android:id="@+id/navigation_item_5"
            android:icon="@drawable/ic_orders"
            android:title="@string/orders"/>
        <item
            android:id="@+id/navigation_item_6"
            android:icon="@drawable/ic_reservations"
            android:title="@string/reservations"/>
    </group>

    <group
        android:id="@+id/navigation_menu_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_settings"
            android:title="@string/settingsTittle"
            android:checkable="false" />
        <item
            android:id="@+id/navigation_item_settings_1"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            android:checkable="false"/>
        <item
            android:id="@+id/navigation_item_settings_2"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            android:checkable="false"/>
    </group>
</menu>