<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.FragmentMain">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/pharmacies_cv"
                card_view:cardElevation="4dp"
                card_view:cardBackgroundColor="@color/colorAccent"
                android:layout_margin="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_pharmacies"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/pharmacies"
                        android:gravity="center"
                        android:textSize="@dimen/content_name"
                        android:layout_weight="0.5"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/map_cv"
                card_view:cardElevation="4dp"
                card_view:cardBackgroundColor="@color/colorAccent"
                android:layout_margin="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_map"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/map"
                        android:gravity="center"
                        android:textSize="@dimen/content_name"
                        android:layout_weight="0.5"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/basket_cv"
                card_view:cardElevation="4dp"
                card_view:cardBackgroundColor="@color/colorAccent"
                android:layout_margin="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_basket"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/basket"
                        android:gravity="center"
                        android:textSize="@dimen/content_name"
                        android:layout_weight="0.5"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/orders_cv"
                card_view:cardElevation="4dp"
                card_view:cardBackgroundColor="@color/colorAccent"
                android:layout_margin="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_orders"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/orders"
                        android:gravity="center"
                        android:textSize="@dimen/content_name"
                        android:layout_weight="0.5"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/reservations_cv"
                card_view:cardElevation="4dp"
                card_view:cardBackgroundColor="@color/colorAccent"
                android:layout_margin="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_reservations"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/reservations"
                        android:gravity="center"
                        android:textSize="@dimen/content_name"
                        android:layout_weight="0.5"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>